--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 
     //paging
     implementation 'androidx.paging:paging-runtime:2.1.2'
+    implementation "androidx.paging:paging-rxjava2:2.1.2"
 
     // room
     implementation "androidx.room:room-runtime:2.2.5"
